--- a/party-front/package.json
+++ b/party-front/package.json
@@ -9,7 +9,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.1.0"
+    "element-ui": "^1.1.4",
+    "vue": "^2.1.0",
+    "vue-router": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
