--- a/party-front/package.json
+++ b/party-front/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "element-ui": "^1.1.4",
     "vue": "^2.1.0",
-    "vue-router": "^2.1.1"
+    "vue-router": "^2.1.1",
+    "vuedraggable": "^2.8.1-rc0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
