--- a/party-front/package.json
+++ b/party-front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "element-ui": "^1.1.6",
     "vue": "^2.1.10",
+    "vue-resource": "^1.2.0",
     "vue-router": "^2.1.1",
     "vuedraggable": "^2.8.1-rc0"
   },
